# bitcoin-from-scratch

./: Cargo.toml
src/: lib.rs  main.rs
tests/: Point.rs  fieldElement.rs
